# python-reference

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
python_reference/: Useful Functions and Code.ipynb  buzz.py  create_globalmart_tables.sql  decorators.py  dynamodb.ipynb  exponential_backoff.py  fib_examples.ipynb  fib_examples.py  function_docstring_example.ipynb  get_all_directory_sizes.py  global_superstore_people.csv  global_superstore_returns.csv  groupingsets.sql  load-s3-to-dynamo.ipynb  mac_mini_prices.ipynb  match_statement_refactor.ipynb  playground.ipynb  plot_styles.ipynb  plotting.py  python_morsels.ipynb  reduce_df_memory_usage.py  retirement_calculator.ipynb  sample_from_population.py  selfjoinemployee.sql  sql_practice.ipynb  sqlalchemy.ipynb  step_function_language.json  testpaths.py  toolbox.py  users_db.sql  users_db.sqlite  why_is_my_employee_id_so_long.ipynb  yield_vs_function.ipynb  yield_vs_function.py
python_reference/basic_logging/: main.py
python_reference/basic_logging/app1/: base.py  home.py
python_reference/basic_logging/app2/: base.py  home.py
python_reference/binary_encoder/: binary-encoder-example.ipynb  binary.py
python_reference/columnar_storage/: column_encoder.py  columnar-storage-example.ipynb
python_reference/file_directory_structure_maker/: fdsm_example.ipynb  structure.py
python_reference/run_length_encoder/: rle.py  run-length-encoder-example.ipynb
python_reference/test_main_file/: __main__.py
