[project]
name = "python-reference"
version = "0.1.0"
description = ""
authors = [{ name = "Chris Birch", email = "datapointchris@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "pyspark>=4.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.7.8",
    "ipykernel>=6.29.4",
    "ipywidgets>=8.1.2",
    "mypy>=1.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]


# ---------- Tool Configurations ---------- #


[tool.bandit]
exclude_dirs = [".git", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv", "tests"]
skips = ["B311", "B404", "B603", "B607"]


[tool.codespell]
skip = '*.lock,*.csv,*.txt,*.sql'
ignore-words-list = "astroid,aNULL,ANULL,anull"
check-filenames = true


[tool.mypy]
pretty = true
ignore_missing_imports = true
allow_untyped_defs = true
check_untyped_defs = false
warn_return_any = false


[tool.pytest.ini_options]
addopts = "-vv"
minversion = "8.0"
testpaths = ["tests"]


[tool.refurb]
enable_all = true


[tool.ruff]
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    ".vscode",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["SIM108"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = ["B006", "B007", "B018", "E501", "E741"]
